--- a/src/css/Header.css
+++ b/src/css/Header.css
@@ -11,3 +11,12 @@
     align-items: center;
     justify-content: center;
 }
+
+ul {
+	list-style-type: none;
+}
+
+li {
+	display: inline;
+	margin-right: 10px;
+}
